Closed
Bug 1219821
Opened 9 years ago
Closed 9 years ago
Reintroduce runtime failure for use of shared memory in asm.js in non-shmem-enabled build
Categories
(Core :: JavaScript Engine: JIT, defect)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: lth, Assigned: lth)
References
Details
Attachments
(1 file)
1.89 KB,
patch
|
arai
:
review+
|
Details | Diff | Splinter Review |
Bug 1193777 changed a dynamic failure to an assertion, but this assertion does not hold because previous dynamic guards that would appear to make the assertion valid are only treated as warnings and do not abort the compilation.
This causes failures on runs where shared memory is not enabled (discovered after branching for aurora).
Assignee | ||
Comment 1•9 years ago
|
||
Includes a drive-by fix for the missing guard in gating.js.
Attachment #8680720 -
Flags: review?(arai.unmht)
Comment 2•9 years ago
|
||
Comment on attachment 8680720 [details] [diff] [review]
bug1219821-assert.patch
Review of attachment 8680720 [details] [diff] [review]:
-----------------------------------------------------------------
Thank you for fixing this!
the currentToken is next |function| for testcase.
it could be EOF, but at least the pos.begin value is not invalid.
Attachment #8680720 -
Flags: review?(arai.unmht) → review+
https://hg.mozilla.org/mozilla-central/rev/83c882b4cdc8
https://hg.mozilla.org/releases/mozilla-aurora/rev/dd621727d202
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox43:
--- → fixed
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment 5•9 years ago
|
||
bugherder uplift |
status-b2g-v2.5:
--- → fixed
Comment 6•9 years ago
|
||
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
status-b2g-v2.5:
fixed → ---
Comment 7•9 years ago
|
||
And re-landed on b2g44 (long story, don't ask).
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/dd621727d202
status-b2g-v2.5:
--- → fixed
status-b2g-master:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•