Bug 1219821 - remove static failure, make it dynamic r=arai a=me CLOSED TREE

--HG--
extra : commitid : B6KXNW2nSU9
extra : source : 83c882b4cdc86ecbae8e6d4b522b4dd4d6655828