js/src/asmjs/AsmJSValidate.cpp
@@ -8153,7 +8153,9 @@ CheckModule(ExclusiveContext* cx, AsmJSParser& parser, ParseNode* stmtList,
     m.startFunctionBodies();
 
 #if !defined(ENABLE_SHARED_ARRAY_BUFFER)
-    MOZ_ASSERT(!m.module().hasArrayView() || !m.module().isSharedView());
+    if (m.module().hasArrayView() && m.module().isSharedView())
+        return m.failOffset(m.parser().tokenStream.currentToken().pos.begin,
+                            "shared views not supported by this build");
 #endif
 
     ScopedJSDeletePtr<ModuleCompileResults> mcd;
